--- a/index.html
+++ b/index.html
@@ -8,125 +8,168 @@
   <!-- AOS Animations CSS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
+  <!-- Font Awesome for Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Typing Animation Library -->
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 <body>
+    <!-- Background Animation Canvas -->
+    <canvas id="bg-animation"></canvas>
 
-  <!-- ===== Navbar ===== -->
-  <header class="navbar">
-    <div class="nav-container">
-      <h2 class="logo">Nouri</h2>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+    <!-- ===== Navbar ===== -->
+    <header class="navbar">
+      <div class="nav-container">
+        <h2 class="logo">Nouri</h2>
+        <nav>
+          <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <!-- ===== Hero Section ===== -->
+    <section class="hero" id="home">
+      <div class="container" data-aos="fade-down">
+        <img src="profile.jpg" alt="Nouri Belghit" class="profile-img" />
+        <h1>Hello, I'm <span>Nouri Belghit</span></h1>
+        <p><span class="typed-text"></span></p>
+      </div>
+    </section>
+
+    <!-- ===== About Section ===== -->
+    <section class="about" id="about">
+      <div class="container" data-aos="fade-up">
+        <h2><img src="profile1.jpg" class="section-image left-image" /> About Me</h2>
+        <p>
+          I'm a passionate Computer Science student from Algeria. I enjoy building clean and functional websites, and I'm always excited to learn new technologies and take on challenges in web development.
+        </p>
+      </div>
+    </section>
+
+    <!-- ===== Skills Section ===== -->
+    <section class="skills" id="skills">
+      <div class="container" data-aos="fade-right">
+        <h2><img src="profile2.jpg" class="section-image right-image" /> Skills</h2>
+        <ul class="skills-list">
+          <li>C Programming</li>
+          <li>HTML / CSS / JavaScript</li>
+          <li>PHP & MySQL</li>
+          <li>Problem Solving</li>
+          <li>Teamwork & Event Management</li>
         </ul>
-      </nav>
-    </div>
-  </header>
+      </div>
+    </section>
 
-  <!-- ===== Hero Section ===== -->
-  <section class="hero" id="home">
-    <div class="container" data-aos="fade-down">
-      <img src="profile.jpg" alt="Nouri Belghit" class="profile-img" />
-      <h1>Hello, I'm <span>Nouri Belghit</span></h1>
-      <p>A Computer Science Student</p>
-    </div>
-  </section>
+    <!-- ===== Projects Section ===== -->
+    <section class="projects" id="projects">
+  <div class="container" data-aos="fade-left">
+    <h2><img src="profile3.jpg" class="section-image left-image" /> Projects</h2>
 
-  <!-- ===== About Section ===== -->
- <section class="about" id="about">
-  <div class="container" data-aos="fade-up">
-    <h2>About Me</h2>
-    <p>
-      I'm a self-driven Web Developer with a strong passion for crafting elegant and efficient websites and web applications. Over the past 2+ years, I’ve worked on various freelance projects and personal platforms using modern technologies like HTML, CSS, JavaScript, PHP, and MySQL.
-    </p>
-    <p>
-      My main focus is frontend development with clean UI/UX design principles, but I also enjoy diving into backend development and building full-stack web solutions. I’m constantly learning, experimenting with new tools, and striving to write better, more maintainable code.
-    </p>
-    <p>
-      Currently, I’m working as a Junior Developer at <strong>DevNova Solutions</strong> (Remote), collaborating with international teams and delivering responsive, user-focused web interfaces.
-    </p>
+    <div class="project-card" data-aos="fade-up" data-aos-delay="100">
+      <h3>UniShare DZ</h3>
+      <p>A web application built for Algerian university students to share academic resources.</p>
+    </div>
+
+    <div class="project-card" data-aos="fade-up" data-aos-delay="200">
+      <h3>MyStore DZ</h3>
+      <p>A professional e-commerce platform designed for Algerian sellers to create and manage their online stores.</p>
+    </div>
+
   </div>
 </section>
 
-
-  <!-- ===== Skills Section ===== -->
-  <section class="skills" id="skills">
-    <div class="container" data-aos="fade-right">
-      <h2>Skills</h2>
-      <ul class="skills-list">
-        <li>C Programming</li>
-        <li>HTML / CSS / JavaScript</li>
-        <li>PHP & MySQL</li>
-        <li>Problem Solving</li>
-        <li>Teamwork & Event Management</li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- ===== Projects Section ===== -->
-  <section class="projects" id="projects">
-    <div class="container" data-aos="fade-left">
-      <h2>Projects</h2>
-      <div class="project-card">
-        <h3>UniShare DZ</h3>
-        <p>A web application built for Algerian university students to share academic resources.</p>
+    <!-- ===== Contact Section ===== -->
+    <section class="contact" id="contact">
+      <div class="container" data-aos="fade-up">
+        <h2><img src="profile4.jpg" class="section-image right-image" /> Contact Me</h2>
+        <p>You can reach me via:</p>
+        <ul class="contact-list">
+          <li><i class="fas fa-envelope"></i> officielnouri@gmail.com</li>
+          <li><i class="fab fa-instagram"></i> <a href="https://instagram.com/nouriblg" target="_blank">@nouriblg</a></li>
+          <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/nouri-belghit-8332b6278/" target="_blank">LinkedIn</a></li>
+          <li><i class="fab fa-whatsapp"></i> <a href="https://wa.me/213654485544" target="_blank">+213 654 485 544</a></li>
+        </ul>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- ===== Contact Section ===== -->
-  <section class="contact" id="contact">
-    <div class="container" data-aos="fade-up">
-      <h2>Contact Me</h2>
-      <p>You can reach me via:</p>
-     <ul class="contact-list">
-  <li>Email: officielnouri@gmail.com</li>
-  <li>GitHub: <a href="https://github.com/nouridev" target="_blank">@nouridev</a></li>
-  <li>Freelance Available: Yes (Remote only)</li>
-  <li>Current Role: Junior Web Developer at DevNova Solutions</li>
-  <li>Specialties: Frontend Development, UI/UX, PHP & MySQL</li>
-  <li>Portfolio Website: <a href="https://nouri.dev" target="_blank">nouri.dev</a></li>
-</ul>
+    <!-- Scroll to Top Button -->
+    <button id="scrollTopBtn" title="Go to top">↑</button>
 
+    <!-- AOS Script -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 
-    </div>
-  </section>
-
-  <!-- Scroll to Top Button -->
-  <button id="scrollTopBtn" title="Go to top">↑</button>
-
-  <!-- AOS Script -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
-
-  <!-- Scroll to Top Script -->
-  <script>
-    const scrollBtn = document.getElementById("scrollTopBtn");
-
-    window.onscroll = function () {
-      if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
-        scrollBtn.style.display = "block";
-      } else {
-        scrollBtn.style.display = "none";
-      }
-    };
-
-    scrollBtn.onclick = function () {
-      window.scrollTo({
-        top: 0,
-        behavior: "smooth"
+    <!-- Typing Animation Script -->
+    <script>
+      new Typed(".typed-text", {
+        strings: ["Computer Science Student", "Web Developer", "Tech Enthusiast"],
+        typeSpeed: 60,
+        backSpeed: 40,
+        backDelay: 1500,
+        loop: true
       });
-    };
-  </script>
+    </script>
 
+    <!-- Scroll to Top Script -->
+    <script>
+      const scrollBtn = document.getElementById("scrollTopBtn");
+      window.onscroll = () => {
+        scrollBtn.style.display = window.scrollY > 300 ? "block" : "none";
+      };
+      scrollBtn.onclick = () => {
+        window.scrollTo({ top: 0, behavior: "smooth" });
+      };
+    </script>
+
+    <!-- Background Animation Script -->
+    <script>
+      const canvas = document.getElementById('bg-animation');
+      const ctx = canvas.getContext('2d');
+
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+
+      const chars = '01{}[]<>$&@%!;:'.split('');
+      const fontSize = 14;
+      const columns = canvas.width / fontSize;
+      const drops = Array(Math.floor(columns)).fill(1);
+
+      function draw() {
+        ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+        ctx.fillStyle = '#6a0dad';
+        ctx.font = fontSize + 'px monospace';
+
+        for (let i = 0; i < drops.length; i++) {
+          const text = chars[Math.floor(Math.random() * chars.length)];
+          ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+
+          if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+            drops[i] = 0;
+          }
+          drops[i]++;
+        }
+      }
+
+      setInterval(draw, 50);
+
+      window.addEventListener('resize', () => {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+      });
+    </script>
 </body>
 </html>
-
