--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <p>You can reach me via:</p>
         <ul class="contact-list">
           <li><i class="fas fa-envelope"></i> officielnouri@gmail.com</li>
-          <li><i class="fab fa-instagram"></i> <a href="https://instagram.com/nouriblg" target="_blank">@nouriblg</a></li>
+          <li><i class="fab fa-instagram"></i> <a href="https://instagram.com/nouriblg13" target="_blank">@nouriblg</a></li>
           <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/nouri-belghit-8332b6278/" target="_blank">LinkedIn</a></li>
           <li><i class="fab fa-whatsapp"></i> <a href="https://wa.me/213654485544" target="_blank">+213 654 485 544</a></li>
         </ul>
@@ -173,3 +173,4 @@
     </script>
 </body>
 </html>
+
